--- a/src/main.css
+++ b/src/main.css
@@ -9570,7 +9570,7 @@ a-white:hover, a-white:active, a-white:focus {
   font-weight: inherit;
 }
 
-.post--single .content-col ul h2 {
+.post--single .content-col ul + h2 {
   margin-top: 24px;
 }
 
