--- a/src/main.css
+++ b/src/main.css
@@ -9705,3 +9705,9 @@ img.aligncenter {
   list-style: disc;
   padding-left: 1.5rem;
 }
+
+.content-col ul,
+.content-col ol {
+  list-style: disc;
+  margin-left: 1.25em;
+}
